--- a/GettingStartedv3/.classpath
+++ b/GettingStartedv3/.classpath
@@ -6,5 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/74013002/Desktop/Phidget22Java/phidget22.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
